--- a/src/app/modules/admin/containers/preview-report/preview-report.component.html
+++ b/src/app/modules/admin/containers/preview-report/preview-report.component.html
@@ -35,7 +35,7 @@
         </section>
         <section style="border-top: 2px solid  #D9D9D9; margin-top: 20px ;">
             <div class="buttons">
-                <button class="button" mat-button (click)="confirm()">Enviar</button> 
+                <!-- <button class="button" mat-button (click)="confirm()">Enviar</button>  -->
                 <button *ngIf="newname" (click)="cancel()" class="button"mat-button>Cerrar</button>
                 <button *ngIf="!newname" (click)="backAddReport()" class="button"mat-button>Cerrar</button>
             </div>
