--- a/src/app/modules/auth/containers/login/login.component.scss
+++ b/src/app/modules/auth/containers/login/login.component.scss
@@ -4,27 +4,27 @@
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  min-height: calc(100vh - 4.875rem); //4.875rem = 78px --> altura del footer
+  min-height: calc(100vh - 78px); //78px = 4.875rem --> altura del footer
 }
 .conteiner-login__logo {
-  width: 42rem;
+  width: 672px;
   -o-object-fit: contain;
   object-fit: contain;
-  margin: 3.125rem 1em;
+  margin: 50px 1em;
 }
 .login {
-  width: 42rem;
+  width: 672px;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 2em;
-  margin-top: 5.8125rem;
+  margin-top: 93px;
 }
 .login__h1 {
-  font-size: 2.25rem;
-  line-height: 2.6875rem;
-  margin-bottom: 3.375rem;
-  margin-top: 1.25rem;
+  font-size: 36px;
+  line-height: 43px;
+  margin-bottom: 14px;
+  margin-top: 20px;
 }
 .login__form {
   display: flex;
@@ -34,18 +34,20 @@
 }
 .login__label {
   font-weight: 400;
-  font-size: 1.5rem;
-  line-height: 1.8125rem;
+  font-size: 24px;
+  line-height: 29px;
+  margin-top: 40px;
+  margin-bottom: 24px;
 }
 .login__input {
-  width: 18.125rem;
-  height: 3.75rem;
+  width: 290px;
+  height: 60px;
   font-weight: 400;
-  font-size: 1.25rem;
+  font-size: 20px;
   background: $color-bg-grey;
-  border-radius: 3.75rem;
+  border-radius: 60px;
   border: none;
-  padding: 0 1.875rem;
+  padding: 0 30px;
 
   outline-color: $color-primary-border;
   text-align: center;
@@ -71,13 +73,13 @@
 .login__input-container {
   display: flex;
   align-items: center;
-  margin: 1.5625rem 0 3rem 0;
-  padding-left: 50px;
+  margin-bottom: 5px;
+  padding-left: 3.125rem;
 }
 .login__input-ico-eye {
   box-sizing: content-box;
-  width: 30px;
-  padding: 10px 10px;
+  width: 1.875rem;
+  padding: 0.625rem 0.625rem;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
   &:hover {
@@ -86,57 +88,60 @@
     }
   }
 }
+.errorHidde {
+  visibility: hidden;
+}
 .login__input-ico-eye--active {
   path {
     stroke: #1967d2;
   }
 }
 .login__recordar-usuario {
-  margin-top: 0.375rem;
+  margin-top: 5px;
   font-weight: 400;
-  font-size: 1.375rem;
-  line-height: 1.625rem;
+  font-size: 22px;
+  line-height: 26px;
 }
 .login__recuperar-contrasena {
-  margin-top: 1.125rem;
+  margin-top: 18px;
   text-decoration: none;
   color: $color-text-secondary;
   font-weight: 400;
-  font-size: 1.125rem;
-  line-height: 1.375rem;
+  font-size: 18px;
+  line-height: 22px;
 }
 .login__btn-ingresar {
-  width: 9.0625rem;
-  height: 3.75rem;
-  border-radius: 3.75rem;
+  width: 145px;
+  height: 60px;
+  border-radius: 60px;
   color: $color-bg-grey;
-  margin: 2.25rem 0;
+  margin: 36px 0;
   font-weight: 400;
-  font-size: 1.5rem;
-  line-height: 1.8125rem;
+  font-size: 24px;
+  line-height: 29px;
 }
 @media (max-width: 1400px) {
   .conteiner-login__logo {
-    width: 31.25rem;
+    width: 500px;
   }
   .login {
     margin-top: 0;
   }
   .login__h1 {
-    margin-bottom: 2.4rem;
-    margin-top: 0.9rem;
+    margin-bottom: 5px;
+    margin-top: 14.4px;
   }
-
-  .login__input-container {
-    margin: 1.2rem 0 2.4rem 0;
+  .login__label {
+    margin-top: 25px;
+    margin-bottom: 15px;
   }
 }
 @media (max-width: 768px) {
   .login {
-    width: 18rem;
+    width: 288px;
   }
   .conteiner-login__logo {
-    width: 18rem;
-    margin: 1rem 0;
+    width: 288px;
+    margin: 16px 0;
   }
 }
