--- a/src/app/modules/admin/containers/comparative-table/comparative-table.component.html
+++ b/src/app/modules/admin/containers/comparative-table/comparative-table.component.html
@@ -5,14 +5,14 @@
       <div class="header__container">
         <h4 class="header__report">Reporte L00005</h4>
         <p class="header__period">
-          Periodo <span class="header__period-span">01/2022 a 06/2022</span>
+          Período <span class="header__period-span">01/2022 a 06/2022</span>
         </p>
       </div>
       <h4 class="header__variables">Variables</h4>
       <div class="header__container">
         <h4 class="header__report">Reporte C00005</h4>
         <p class="header__period">
-          Periodo <span class="header__period-span">07/2022 a 12/2022</span>
+          Período <span class="header__period-span">07/2022 a 12/2022</span>
         </p>
       </div>
     </header>
