--- a/src/app/modules/admin/containers/preview-report/preview-report.component.html
+++ b/src/app/modules/admin/containers/preview-report/preview-report.component.html
@@ -17,7 +17,7 @@
       </div>
       <label class="label-repor-name">Reporte {{ report.nombre }} </label>
       <div class="periodo">
-        <p>Periodo</p>
+        <p>Período</p>
         <label
           >{{ report.desde | date: "dd/MM/yyyy" }} A
           {{ report.hasta | date: "dd/MM/yyyy" }}</label
@@ -100,7 +100,7 @@
         </div>
         <label class="label-repor-name">Reporte {{ name }} </label>
         <div class="periodo">
-          <p>Periodo</p>
+          <p>Período</p>
           <label
             >{{ since | date: "dd/MM/yyyy" }} A
             {{ until | date: "dd/MM/yyyy" }}</label
