--- a/src/app/modules/admin/containers/reports/reports.component.html
+++ b/src/app/modules/admin/containers/reports/reports.component.html
@@ -47,11 +47,7 @@
             Fecha de creación
           </div>
           <div
-            class="
-              list-reports__header
-              list-reports__header--action
-              list-reports__cell--acction
-            "
+            class="list-reports__header list-reports__header--action list-reports__cell--acction"
           >
             Acciones
           </div>
@@ -220,7 +216,7 @@
       </div>
       <label class="label-repor-name">Reporte {{ report.nombre }} </label>
       <div class="periodo">
-        <p>Periodo</p>
+        <p>Período</p>
         <label
           >{{ report.periodoDesde | date: "dd/MM/yyyy" }} A
           {{ report.periodoHasta | date: "dd/MM/yyyy" }}</label
