--- a/src/app/modules/user/containers/pending-reports/pending-reports.component.html
+++ b/src/app/modules/user/containers/pending-reports/pending-reports.component.html
@@ -6,8 +6,8 @@
       <ul class="list__row-header">
         <li class="list__header">Reporte Número</li>
         <li class="list__header">Reporte asignado para centro</li>
-        <li class="list__header">Periodo a Reportar</li>
-        <li class="list__header">Fecha Limite de Entrega</li>
+        <li class="list__header">Período a Reportar</li>
+        <li class="list__header">Fecha Límite de Entrega</li>
       </ul>
       <ul
         class="list__row-item"
